fix: correct footer alignment

--- a/css/base.css
+++ b/css/base.css
@@ -17,7 +17,7 @@
 }
 
 * { box-sizing: border-box; }
-html, body { height: 100%; }
+/* html, body { height: 100%; } */
 
 body {
   margin: 0;
